fix modal z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -235,7 +235,7 @@ nav .btn-github {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 20;
 }
 
 .modal-wrapper {
